feat(backend): structured properties and forms
* structured properties data model
* forms service
* rollback service
* entity client refactor
* configuration: logo & icon, base url