@@ -337,26 +337,26 @@ public abstract class SearchGraphServiceTestBase extends GraphServiceTestBase {
     // Without timestamps
     EntityLineageResult upstreamResult = getUpstreamLineage(datasetTwoUrn, null, null);
     EntityLineageResult downstreamResult = getDownstreamLineage(datasetTwoUrn, null, null);
-    Assert.assertEquals(new Integer(1), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(3), downstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(1), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(3), downstreamResult.getTotal());
 
     // Timestamp before
     upstreamResult = getUpstreamLineage(datasetTwoUrn, 0L, initialTime - 10);
     downstreamResult = getDownstreamLineage(datasetTwoUrn, 0L, initialTime - 10);
-    Assert.assertEquals(new Integer(0), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(1), downstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(0), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(1), downstreamResult.getTotal());
 
     // Timestamp after
     upstreamResult = getUpstreamLineage(datasetTwoUrn, initialTime + 10, initialTime + 100);
     downstreamResult = getDownstreamLineage(datasetTwoUrn, initialTime + 10, initialTime + 100);
-    Assert.assertEquals(new Integer(0), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(1), downstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(0), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(1), downstreamResult.getTotal());
 
     // Timestamp included
     upstreamResult = getUpstreamLineage(datasetTwoUrn, initialTime - 10, initialTime + 10);
     downstreamResult = getDownstreamLineage(datasetTwoUrn, initialTime - 10, initialTime + 10);
-    Assert.assertEquals(new Integer(1), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(3), downstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(1), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(3), downstreamResult.getTotal());
 
     // Update only one of the downstream edges
     Long updatedTime = 2000L;
@@ -387,20 +387,20 @@ public abstract class SearchGraphServiceTestBase extends GraphServiceTestBase {
     // Without timestamps
     upstreamResult = getUpstreamLineage(datasetTwoUrn, null, null);
     downstreamResult = getDownstreamLineage(datasetTwoUrn, null, null);
-    Assert.assertEquals(new Integer(1), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(3), downstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(1), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(3), downstreamResult.getTotal());
 
     // Window includes initial time and updated time
     upstreamResult = getUpstreamLineage(datasetTwoUrn, initialTime - 10, updatedTime + 10);
     downstreamResult = getDownstreamLineage(datasetTwoUrn, initialTime - 10, updatedTime + 10);
-    Assert.assertEquals(new Integer(1), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(3), downstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(1), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(3), downstreamResult.getTotal());
 
     // Window includes updated time but not initial time
     upstreamResult = getUpstreamLineage(datasetTwoUrn, initialTime + 10, updatedTime + 10);
     downstreamResult = getDownstreamLineage(datasetTwoUrn, initialTime + 10, updatedTime + 10);
-    Assert.assertEquals(new Integer(1), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(2), downstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(1), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(2), downstreamResult.getTotal());
   }
 
   /**
